--- a/CARTA/intex.html
+++ b/CARTA/intex.html
@@ -10,7 +10,7 @@
   <div class="card">
     <div class="icon">❤️</div>
     <h1> Oii ... Coisa linda</h1>
-    <a href="cp.html" class="botao">click...</a>
+    <a href="css/cp.html" class="botao">click...</a>
   </div>
 </body>
 </html>
