--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gabi</title>
-  <link rel="stylesheet" href="css/click.css" />
+  <link rel="stylesheet" href="CARTA/css/click.css" />
 </head>
 <body>
   <div class="card">
     <div class="icon">❤️</div>
     <h1> Oii ... Coisa linda</h1>
-    <a href="css/cp.html" class="botao">click...</a>
+    <a href="CARTA/cp.html" class="botao">click...</a>
   </div>
 </body>
 </html>
