--- a/CARTA/cp.html
+++ b/CARTA/cp.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Produto dengoo</title>
   <link rel="stylesheet" href="css/parece.css" />
-  
+
 </head>
+
 <body>
   <div class="container">
     <div class="carta" id="carta">
-      <h1>Gabi,💛</h1>
+      <h1>Feliz aniversário, coisa linda! 💖</h1>
       <p>
-            Feliz aniversário! Que seu dia seja tão lindo e especial quanto você é. 🫶🏾
+        Hoje é o dia de uma das pessoas mais especiais que conheço. <br> Sou muito grato por ter você na minha vida sua amizade é um presente.
 
-    Sou muito grato(a) por ter você na minha vida — sua amizade é um presente e seu jeitinho ilumina tudo ao redor.
-    Você merece o mundo! Que essa nova fase venha cheia de alegrias, conquistas e muito amor.
+        Que seu novo ciclo venha com ainda mais alegrias, sonhos realizados e momentos inesquecíveis. Você merece tudo
+        de mais bonito e verdadeiro nesse mundo. Continue sendo essa pessoa incrível que toca o coração de quem tem a
+        sorte de te conhecer.<br>
 
-    Com carinho,
+        Te desejo um dia lindo, cheio de amor, sorrisos e abraços apertados (mesmo que à distância)!
+
+        Com muito carinho,
+        do seu <br> fã número 1 💌
+
+
+        Com carinho,
       </p>
       <div class="decoracao canto-top-esq">❦</div>
       <div class="decoracao canto-top-dir">❦</div>
@@ -28,4 +37,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
